docs/archive/v0.4.0/PROJECT_STATUS.md
# PersonaLab 项目当前状态

**最后更新**: 2025-10-16
**当前版本**: v0.4.0 (重构需求和设计文档，去除冗余并明确职责边界)
**状态**: 🟡 设计阶段

> 📌 **重要**：这是项目的"活文档"，记录**当前真实状态**，而非某个发布版本。
> 版本发布时，会归档快照到 `docs/archive/v{版本号}/`

---

## 🎯 项目概述

PersonaLab（人格实验室）是一个 **AI 角色对话平台**，支持长篇、高一致性、角色可成长的互动叙事。

### 核心功能需求

1. **会话实例管理** - 创建独立的对话实例，状态隔离
2. **导演模块** - 剧情推进控制，确保AI不偏离主线
3. **流式对话** - WebSocket 实时通信，打字机效果
4. **人格成长** - 三层人格机制（静态+慢动态+快动态）
5. **长期记忆** - RAG向量检索历史事件
6. **角色管理** - 自定义角色人格和描述（CRUD）
7. **背景管理** - 创建对话场景背景（CRUD）
8. **暗色主题** - 专业的暗色 UI 设计

### 技术选型（已确定）

**前端**：
- **框架**: Next.js 14 (App Router)
- **语言**: TypeScript
- **UI 库**: Shadcn/ui + Tailwind CSS
- **状态管理**: Zustand（前端临时状态）
- **通信**: Socket.IO Client (WebSocket) + Fetch API (REST)

**后端**：
- **语言**: Python 3.11+
- **框架**: FastAPI（REST API + WebSocket）
- **LLM**: LangChain + OpenAI/Claude API
- **向量库**: Chroma（本地部署）
- **存储**: 文件系统（JSON/JSONL）

---

## 🏗️ 架构状态

### 目录结构（最新设计）

```
personalab/
├── frontend/                 # 前端（待生成）
│   ├── src/
│   │   ├── app/            # Next.js 页面
│   │   │   ├── instances/   # 会话实例管理页面
│   │   │   ├── characters/  # 角色管理页面
│   │   │   └── backgrounds/ # 背景管理页面
│   │   ├── components/     # UI 组件
│   │   ├── lib/            # 工具库
│   │   └── types/          # TypeScript 类型
│   └── package.json
│
├── backend/                  # 后端（待生成）
│   ├── app/
│   │   ├── main.py         # FastAPI 入口
│   │   ├── models/         # Pydantic 数据模型
│   │   ├── core/           # 核心业务逻辑
│   │   │   ├── state_manager.py      # 状态管理
│   │   │   ├── event_manager.py      # 事件库管理
│   │   │   ├── prompt_engine.py      # Prompt组装
│   │   │   └── interaction_loop.py   # 核心交互流程
│   │   ├── api/            # REST API
│   │   └── websocket/      # WebSocket
│   └── requirements.txt
│
├── data/                     # 数据目录（运行时生成）
│   ├── characters/          # 角色库（全局）
│   ├── backgrounds/         # 背景库（全局）
│   ├── instances/           # 会话实例（核心）
│   │   └── {instance_id}/
│   │       ├── metadata.json
│   │       ├── character_state.json
│   │       └── sessions/
│   ├── event_library/       # 全局事件库
│   │   └── chroma_db/
│   └── prompt_templates/
│
├── docs/
│   ├── DESIGN_OVERVIEW.md   # 概要设计文档 ✅ v0.3.3
│   ├── REQUIREMENTS.md      # 需求文档 ✅ v2.2
│   ├── QUESTIONS.md         # 待解决问题清单 ✅
│   ├── archive/
│   └── reports/
│
├── temp/
│   ├── reports/
│   └── tests/
│
├── PROJECT_STATUS.md         # 项目状态（本文件）
├── 规范.md                   # 工作规范
├── README.md
└── CHANGELOG.md
```

---

## 🔧 核心架构设计

### 会话实例架构（Conversation Instance）

**核心概念**：
- 会话实例是状态隔离容器，用于同一角色+背景的多次游玩
- 角色状态属于会话实例，不属于全局
- 不同会话实例完全隔离，互不影响
- 一个会话实例内可以有多个会话（暂停/继续）

**数据流**：
```
角色定义（全局）→ 会话实例1 → 角色状态1 → 会话1, 会话2, 会话3
                  → 会话实例2 → 角色状态2 → 会话4, 会话5
```

### 导演模块（Director）

**核心职责**：控制剧情推进，确保AI不偏离主线大纲

**三层控制机制**：
1. **静态约束**：主线大纲（10个点）全量放入Prompt头部4K，JSON格式
2. **动态引导**：剧情状态管理 - AI输出`[PROGRESS:X:status]`，后端正则扫描更新
3. **RAG兜底**：连续3轮未更新时，分层检索（当前实例15条 + 其他实例5条）

**扩展性**：剧情状态管理是导演模块子功能之一，未来可扩展更多机制

### 人格三层机制

**核心原理**：数据的变化速度不同

1. **静态层（core_identity）** - 永不变化
   - archetype, core_goal, core_traits, background_story

2. **慢动态层（growth_state）** - 重大事件才变化
   - beliefs（信念）
   - behavioral_patterns（行为模式）
   - relationships（关系深度）

3. **快动态层（current_state）** - 频繁变化
   - emotions（当前情绪）
   - physical（身体状况）
   - immediate_goals（短期目标）

**维护机制**：
- 每10轮对话执行定期维护任务
- 清理过多累积（快动态层保留最新5个）
- 去重、合并（慢动态层）
- **纯定性描述，绝对禁止量化数值**

### 事件库与RAG

**设计要点**：
- 事件必须记录 `instance_id` 和 `session_id`
- RAG检索策略：
  - 日常对话：只检索当前实例（20条），严格隔离
  - 导演兜底：跨实例检索（当前实例15条 + 其他实例5条）
- 不使用事件链表（previous_event），纯语义检索
- 只在状态变化时写入事件
- 异步写入，不阻塞返回

---

## 📊 当前状态

### 已完成

- [x] 完成核心技术设计（DESIGN.md v0.2.0）
- [x] 明确会话实例（Conversation Instance）架构
- [x] 设计人格三层机制（纯定性）
- [x] 设计事件库结构（带instance_id过滤）
- [x] 设计性能优化方案（~2秒非LLM耗时）
- [x] 删除所有过度设计（量化、链表、归档、摘要）
- [x] 完成需求文档（REQUIREMENTS.md v2.2）
- [x] 研究Silly Tavern和Letta/MemGPT参考系统
- [x] 设计导演模块（Director）- 剧情推进控制
- [x] 设计分层检索策略（当前实例 + 其他实例经验）

### 进行中

- [x] 需求澄清讨论（2025-10-14 晚）
- [x] UI 布局修正与功能清单整理（2025-10-14 晚）
- [ ] 🔴 梳理系统运作机制总览（2025-10-14 晚）- 进行中
  - [ ] 第一步：完整交互流程（端到端，标注所有机制介入点）
  - [ ] 第二步：关键时机的决策树
  - [ ] 第三步：Prompt组装的完整规则
  - [ ] 第四步：状态变更的传播路径
- [ ] 待讨论：导演模块"拉回主线"具体策略
- [ ] 待讨论：快动态层"升级"机制设计
- [ ] 待实现：后端核心模块
- [ ] 待实现：前端UI

---

## 📝 最近调整记录

> 💡 **历史记录归档**：更早的变更记录已移至 [docs/PROJECT_HISTORY.md](docs/PROJECT_HISTORY.md)

### 2025-10-16 - 优化 PROJECT_STATUS.md，归档历史变更 ✅

**背景**：
PS 文件过长（730行），每次加载消耗大量token，且历史信息在日常工作中很少用到。

**优化内容**：
1. **归档历史变更记录**
   - 创建 `docs/PROJECT_HISTORY.md`，归档所有历史变更（2025-10-13 至 2025-10-15）
   - PS 文件只保留最近 3 次调整记录
   - 文件从 730 行压缩到约 350 行，节省约 50% token 消耗

2. **更新版本发布规范**
   - 将"PS 历史归档"添加到 `规范.md` 的版本发布流程
   - 每次版本发布时，将完整 PS 归档到 `docs/archive/v{版本号}/PROJECT_STATUS.md`
   - 日常维护：PS 只保留最近 3-5 次调整记录

**设计原则**：
- ✅ 减少 token 消耗，提高加载效率
- ✅ 保留完整历史记录（归档文件）
- ✅ PS 文件聚焦当前状态和近期变更

### 2025-10-16 - 删除无用设计，简化架构 ✅

**背景**：
在审查 v0.3.2 时发现多个过度设计和无用字段，导致架构复杂化。

**修复内容**：
1. **删除 status 字段**
   - 删除会话文件的 `status` 字段（"active" / "closed" / "summarized"）
   - 原因：汇总后必然开启新会话，旧会话的状态完全没用
   - 判断当前会话：通过 instance/metadata.json 中的 `current_session_id`

2. **重新设计会话编辑功能**
   - 删除"回退 N 轮"功能及其所有约束条件
   - 改为"会话编辑功能"（Prompt 编辑器）
   - **核心理念**：对话界面是 Prompt 编辑器，操作单位是"一条消息"
   - 用户可以：
     - 删除任意消息（user 或 assistant）
     - 编辑任意消息的内容
     - 删除中间部分（如删除 3、4，保留 1、2、5、6）
     - 无任何限制，自由编辑对话历史

3. **修复分层摘要命名**
   - "粗粒度层/细粒度层" → "Summaries Collection / Plots Collection"
   - 原因：如果增加中间层，"粗细粒度"命名无法扩展
   - 新命名按内容命名，可扩展性强

**文档更新**：
- DESIGN_OVERVIEW.md v0.3.2 → v0.3.3
- 删除所有对 status 字段的引用
- 3.4 节从"回退重新生成流程"改为"会话编辑功能（Prompt 编辑器）"

**设计原则**：
- ✅ 用户完全控制：没有任何编辑限制
- ✅ 简单直接：不需要状态检查、不需要缓存同步
- ✅ 核心理念：对话界面 = Prompt 编辑器

### 2025-10-16 - 修复概要设计文档的逻辑冲突 ✅

**背景**：
审查 DESIGN_OVERVIEW.md v0.3.1 时发现 5 个严重逻辑问题和 3 个次要边界条件缺失。

**修复内容**：
1. **术语统一** - "父子结构" → "分层摘要（Hierarchical Summary）"
2. **修复 Chroma 写入冲突** - 明确汇总功能写入 Chroma，更新记忆只修改 JSON
3. **补充会话文件格式定义** - 新增 `type:"summary"` 消息类型定义
4. **明确 RAG 检索范围** - RAG 只检索已汇总的会话，当前会话全量读取
5. **新增回退功能约束** - 只有 active 会话才能回退
6. **优化导演模块描述** - 跨实例检索标注为"可选"

**文档版本**：
- DESIGN_OVERVIEW.md v0.3.1 → v0.3.2

**逻辑验证**：
- ✅ 数据流完整性
- ✅ 功能间依赖关系
- ✅ 状态管理一致性
- ✅ 边界条件处理

---

## 📋 待办事项

### 高优先级（设计阶段）

- [x] 完成核心技术设计（DESIGN.md v0.2.0）
- [x] 解决架构层面的设计问题
- [x] 确定数据结构细节
- [x] 完成需求文档（REQUIREMENTS.md）
- [ ] **设计导演模块"拉回主线"具体策略**
  - 用户点击"🎬 拉回主线"后，后端如何组装 Prompt？
  - 信息应该插入到哪个位置（头部 4K / 中间 / 尾部）？
  - 需要注入什么内容（当前大纲点 + RAG 事件 + 特殊指令）？
  - 如何让 AI 自然地将剧情引导回主线（而不是生硬重置）？
- [ ] **设计快动态层"升级"机制**
  - LLM 如何判断一个状态需要升级到慢动态层？
  - 升级的触发时机（每 10 轮维护时？还是单独任务？）
  - 如何保证性价比（不过度调用 LLM，避免增加太多成本）？
  - 是否需要设置升级条件（如状态持续 N 轮以上）？
- [ ] 设计后端API接口规范（基于会话实例架构）

### 高优先级（后端实现）

- [ ] 搭建FastAPI项目结构
- [ ] 实现数据模型（Pydantic）
- [ ] 实现StateManager（三层人格状态管理）
- [ ] 实现EventManager（RAG + Chroma + 分层检索）
- [ ] 实现Director（导演模块：剧情状态管理 + RAG兜底）
- [ ] 实现PromptEngine（Prompt组装）
- [ ] 实现LLMService（LangChain集成）
- [ ] 实现InteractionLoop（核心交互流程）
- [ ] 实现定期维护任务
- [ ] 实现REST API（会话实例/角色/背景CRUD）
- [ ] 实现WebSocket（流式对话）

### 高优先级（前端实现）

- [ ] 创建Next.js项目结构
- [ ] 生成TypeScript类型定义（基于新架构）
- [ ] 生成API客户端封装（会话实例API）
- [ ] 生成WebSocket管理
- [ ] 生成Shadcn UI基础组件
- [ ] 生成布局组件
- [ ] 生成会话实例管理组件
- [ ] 生成对话功能组件
- [ ] 生成角色管理组件
- [ ] 生成背景管理组件
- [ ] 生成页面路由 

### 中优先级

- [ ] Prompt模板前端管理功能
- [ ] 会话实例导出功能
- [ ] 角色状态展示
- [ ] 添加加载状态和错误处理
- [ ] 响应式布局优化

### 低优先级

- [ ] 编写组件文档
- [ ] 添加单元测试
- [ ] 性能监控和优化

---

## ⚙️ 强制性开发规范

### 1. 文件位置规范

| 文件类型 | 存放位置 | 示例 |
|---------|---------|------|
| 临时测试文件 | `temp/tests/` | test_*.* |
| 临时报告文件 | `temp/reports/` | *_report.md |
| 版本发布报告 | `docs/reports/` | v{版本号}_release_report.md |
| 归档文档 | `docs/archive/v{版本号}/` | PROJECT_STATUS.md 等 |
| 核心文档 | 项目根目录 | PROJECT_STATUS.md, README.md, CHANGELOG.md, 规范.md |
| 前端源代码 | `frontend/src/` | *.ts, *.tsx |
| 后端源代码 | `backend/app/` | *.py |
| 正式测试 | `tests/` | test_*.* |

### 2. 设计原则（关键）

**绝对禁止量化**：
- ❌ 不使用 priority, intensity, level, score 等数字
- ❌ 不使用"每N轮-1"的降级机制
- ❌ 不使用数字阈值判断删除

**纯定性描述**：
- ✅ 所有内容都是文本描述
- ✅ 用 timestamp 记录时间
- ✅ 用定期维护任务清理数据

---

## 🤝 AI 协作指南

### 基本原则

1. **归档文档是历史快照**：`docs/archive/` 不代表最新状态
2. **问题查阅顺序**：PROJECT_STATUS.md → DESIGN.md → 规范.md
3. **设计原则**：纯定性描述，绝对禁止量化

### 操作规范

**执行项目管理操作时，参考 `规范.md`**：
- 归档：`按照规范归档`
- 重构：`按照规范重构`
- 版本发布：`按照规范发布`
- 更新PS：`按照规范更新PS` 或 `更新PS`

---

## 🎯 下一步计划

### 短期目标（1-2周）

1. 设计后端API接口规范（基于会话实例架构）
2. 搭建FastAPI后端项目结构
3. 实现核心模块（StateManager, EventManager, PromptEngine）
4. 实现基础REST API

### 中期目标（3-4周）

1. 完成后端核心功能实现
2. 搭建Next.js前端项目
3. 实现前端核心UI组件
4. 前后端联调

### 长期目标（1-2月）

1. 完成V1.0功能开发
2. 测试和优化
3. 编写用户文档
4. 准备发布

---

**文档版本**: v0.3.6
**创建日期**: 2025-10-13
**最后更新**: 2025-10-16
