docs/archive/v0.5.0/PROJECT_STATUS.md
# PersonaLab 项目当前状态

**最后更新**: 2025-10-16
**当前版本**: v0.5.0 (拆分设计文档，模块化详细设计)
**状态**: 🟡 设计阶段

> 📌 **重要**：这是项目的"活文档"，记录**当前真实状态**，而非某个发布版本。
> 版本发布时，会归档快照到 `docs/archive/v{版本号}/`

---

## 🎯 项目概述

PersonaLab（人格实验室）是一个 **AI 角色对话平台**，支持长篇、高一致性、角色可成长的互动叙事。

### 核心功能需求

1. **会话实例管理** - 创建独立的对话实例，状态隔离
2. **导演模块** - 剧情推进控制，确保AI不偏离主线
3. **流式对话** - WebSocket 实时通信，打字机效果
4. **人格成长** - 三层人格机制（静态+慢动态+快动态）
5. **长期记忆** - RAG向量检索历史事件
6. **角色管理** - 自定义角色人格和描述（CRUD）
7. **背景管理** - 创建对话场景背景（CRUD）
8. **暗色主题** - 专业的暗色 UI 设计

### 技术选型（已确定）

**前端**：
- **框架**: Next.js 14 (App Router)
- **语言**: TypeScript
- **UI 库**: Shadcn/ui + Tailwind CSS
- **状态管理**: Zustand（前端临时状态）
- **通信**: Socket.IO Client (WebSocket) + Fetch API (REST)

**后端**：
- **语言**: Python 3.11+
- **框架**: FastAPI（REST API + WebSocket）
- **LLM**: LangChain + OpenAI/Claude API
- **向量库**: Chroma（本地部署）
- **存储**: 文件系统（JSON/JSONL）

---

## 🏗️ 架构状态

### 目录结构（最新设计）

```
personalab/
├── frontend/                 # 前端（待生成）
│   ├── src/
│   │   ├── app/            # Next.js 页面
│   │   │   ├── instances/   # 会话实例管理页面
│   │   │   ├── characters/  # 角色管理页面
│   │   │   └── backgrounds/ # 背景管理页面
│   │   ├── components/     # UI 组件
│   │   ├── lib/            # 工具库
│   │   └── types/          # TypeScript 类型
│   └── package.json
│
├── backend/                  # 后端（待生成）
│   ├── app/
│   │   ├── main.py         # FastAPI 入口
│   │   ├── models/         # Pydantic 数据模型
│   │   ├── core/           # 核心业务逻辑
│   │   │   ├── state_manager.py      # 状态管理
│   │   │   ├── event_manager.py      # 事件库管理
│   │   │   ├── prompt_engine.py      # Prompt组装
│   │   │   └── interaction_loop.py   # 核心交互流程
│   │   ├── api/            # REST API
│   │   └── websocket/      # WebSocket
│   └── requirements.txt
│
├── data/                     # 数据目录（运行时生成）
│   ├── characters/          # 角色库（全局）
│   ├── backgrounds/         # 背景库（全局）
│   ├── instances/           # 会话实例（核心）
│   │   └── {instance_id}/
│   │       ├── metadata.json
│   │       ├── character_state.json
│   │       └── sessions/
│   ├── event_library/       # 全局事件库
│   │   └── chroma_db/
│   └── prompt_templates/
│
├── docs/
│   ├── DESIGN_OVERVIEW.md   # 概要设计文档 ✅ v0.5.0
│   ├── REQUIREMENTS.md      # 需求文档 ✅ v3.0
│   ├── QUESTIONS.md         # 待解决问题清单 ✅
│   ├── design/              # 详细设计文档（模块化）
│   │   ├── data_structure.md
│   │   ├── director.md
│   │   ├── rag.md
│   │   ├── persona.md
│   │   └── config.md
│   ├── archive/
│   └── reports/
│
├── temp/
│   ├── reports/
│   └── tests/
│
├── PROJECT_STATUS.md         # 项目状态（本文件）
├── 规范.md                   # 工作规范
├── README.md
└── CHANGELOG.md
```

---

## 🔧 核心架构设计

### 会话实例架构（Conversation Instance）

**核心概念**：
- 会话实例是状态隔离容器，用于同一角色+背景的多次游玩
- 角色状态属于会话实例，不属于全局
- 不同会话实例完全隔离，互不影响
- 一个会话实例内可以有多个会话（暂停/继续）

**数据流**：
```
角色定义（全局）→ 会话实例1 → 角色状态1 → 会话1, 会话2, 会话3
                  → 会话实例2 → 角色状态2 → 会话4, 会话5
```

### 导演模块（Director）

**核心职责**：控制剧情推进，确保AI不偏离主线大纲

**三层控制机制**：
1. **静态约束**：主线大纲（10个点）全量放入Prompt头部4K，JSON格式
2. **动态引导**：剧情状态管理 - AI输出`[PROGRESS:X:status]`，后端正则扫描更新
3. **RAG兜底**：连续3轮未更新时，分层检索（当前实例15条 + 其他实例5条）

**扩展性**：剧情状态管理是导演模块子功能之一，未来可扩展更多机制

### 人格三层机制

**核心原理**：数据的变化速度不同

1. **静态层（core_identity）** - 永不变化
   - archetype, core_goal, core_traits, background_story

2. **慢动态层（growth_state）** - 重大事件才变化
   - beliefs（信念）
   - behavioral_patterns（行为模式）
   - relationships（关系深度）

3. **快动态层（current_state）** - 频繁变化
   - emotions（当前情绪）
   - physical（身体状况）
   - immediate_goals（短期目标）

**维护机制**：
- 每10轮对话执行定期维护任务
- 清理过多累积（快动态层保留最新5个）
- 去重、合并（慢动态层）
- **纯定性描述，绝对禁止量化数值**

### 事件库与RAG

**设计要点**：
- 事件必须记录 `instance_id` 和 `session_id`
- RAG检索策略：
  - 日常对话：只检索当前实例（20条），严格隔离
  - 导演兜底：跨实例检索（当前实例15条 + 其他实例5条）
- 不使用事件链表（previous_event），纯语义检索
- 只在状态变化时写入事件
- 异步写入，不阻塞返回

---

## 📊 当前状态

### 已完成

- [x] 完成核心技术设计（DESIGN.md v0.2.0）
- [x] 明确会话实例（Conversation Instance）架构
- [x] 设计人格三层机制（纯定性）
- [x] 设计事件库结构（带instance_id过滤）
- [x] 设计性能优化方案（~2秒非LLM耗时）
- [x] 删除所有过度设计（量化、链表、归档、摘要）
- [x] 完成需求文档（REQUIREMENTS.md v2.2）
- [x] 研究Silly Tavern和Letta/MemGPT参考系统
- [x] 设计导演模块（Director）- 剧情推进控制
- [x] 设计分层检索策略（当前实例 + 其他实例经验）

### 进行中

- [x] 需求澄清讨论（2025-10-14 晚）
- [x] UI 布局修正与功能清单整理（2025-10-14 晚）
- [ ] 🔴 梳理系统运作机制总览（2025-10-14 晚）- 进行中
  - [ ] 第一步：完整交互流程（端到端，标注所有机制介入点）
  - [ ] 第二步：关键时机的决策树
  - [ ] 第三步：Prompt组装的完整规则
  - [ ] 第四步：状态变更的传播路径
- [ ] 待讨论：导演模块"拉回主线"具体策略
- [ ] 待讨论：快动态层"升级"机制设计
- [ ] 待实现：后端核心模块
- [ ] 待实现：前端UI

---

## 📝 最近调整记录

> 💡 **历史记录归档**：更早的变更记录已移至 [docs/PROJECT_HISTORY.md](docs/PROJECT_HISTORY.md)

### 2025-10-16 - 拆分设计文档，模块化详细设计 ✅

**背景**：
DESIGN_OVERVIEW.md 文档过长（750行），难以维护和查阅。需要模块化拆分，便于独立修改。

**拆分方案**：
1. **零依赖设计**：各模块文档自包含，只依赖底层数据字典
2. **DESIGN_OVERVIEW.md v0.5.0**（精简32%：750行→506行）
   - 只保留架构概览和核心流程
   - 新增文档索引表格，指向详细设计
   - 删除详细实现，移至模块文档

3. **新增模块文档**（docs/design/）：
   - data_structure.md (301行) - 底层数据字典（JSON、JSONL、Chroma格式）
   - director.md (266行) - 导演模块详细设计（情节点设置、进度引导、RAG兜底）
   - rag.md (220行) - RAG检索策略详细设计（日常对话RAG、深度搜索、分层摘要）
   - persona.md (206行) - 角色人格机制详细设计（两层人格、Prompt组装、更新记忆）
   - config.md (253行) - 配置系统详细设计（功能开关、前端控制）

**拆分效果**：
- ✅ 零依赖：修改一个模块不影响其他模块
- ✅ 易查阅：通过索引快速定位详细设计
- ✅ 保留流程：DESIGN_OVERVIEW.md 保留核心流程，方便理解全局
- ✅ 易维护：每个模块文档200-300行，清晰聚焦

### 2025-10-16 - 重构需求和设计文档，去除冗余并明确职责边界 ✅

**背景**：
REQUIREMENTS.md、DESIGN_OVERVIEW.md、SYSTEM_FLOW.md 三个文档存在大量重复内容（约50%），职责不清晰。

**重构内容**：
1. **REQUIREMENTS.md v3.0**（精简46%：792行→425行）
   - 删除所有设计细节（导演模块实现、RAG代码示例、数据结构定义、Prompt策略）
   - 只保留需求本身（问题描述、期望、约束）
   - 新增需求追溯链接到设计文档

2. **DESIGN_OVERVIEW.md v0.4.0**
   - 补充"日常对话RAG检索"章节（第5.1章）
   - 补充"Prompt组装策略"章节（第3.5章）
   - 修正"汇总功能"表述（明确为"当前会话的所有Summaries"）
   - 为核心章节添加需求追溯
   - 删除重复的"5.2 RAG检索范围"章节

**重构效果**：
- ✅ 职责清晰：需求专注"做什么"，设计专注"怎么做"
- ✅ 去除冗余：相同内容只保留一份
- ✅ 便于维护：修改一次，不用同步多个文档
- ✅ 设计文档完整覆盖所有被删除的内容

---

## 📋 待办事项

### 高优先级（设计阶段）

- [x] 完成核心技术设计（DESIGN.md v0.2.0）
- [x] 解决架构层面的设计问题
- [x] 确定数据结构细节
- [x] 完成需求文档（REQUIREMENTS.md）
- [ ] **设计导演模块"拉回主线"具体策略**
  - 用户点击"🎬 拉回主线"后，后端如何组装 Prompt？
  - 信息应该插入到哪个位置（头部 4K / 中间 / 尾部）？
  - 需要注入什么内容（当前大纲点 + RAG 事件 + 特殊指令）？
  - 如何让 AI 自然地将剧情引导回主线（而不是生硬重置）？
- [ ] **设计快动态层"升级"机制**
  - LLM 如何判断一个状态需要升级到慢动态层？
  - 升级的触发时机（每 10 轮维护时？还是单独任务？）
  - 如何保证性价比（不过度调用 LLM，避免增加太多成本）？
  - 是否需要设置升级条件（如状态持续 N 轮以上）？
- [ ] 设计后端API接口规范（基于会话实例架构）

### 高优先级（后端实现）

- [ ] 搭建FastAPI项目结构
- [ ] 实现数据模型（Pydantic）
- [ ] 实现StateManager（三层人格状态管理）
- [ ] 实现EventManager（RAG + Chroma + 分层检索）
- [ ] 实现Director（导演模块：剧情状态管理 + RAG兜底）
- [ ] 实现PromptEngine（Prompt组装）
- [ ] 实现LLMService（LangChain集成）
- [ ] 实现InteractionLoop（核心交互流程）
- [ ] 实现定期维护任务
- [ ] 实现REST API（会话实例/角色/背景CRUD）
- [ ] 实现WebSocket（流式对话）

### 高优先级（前端实现）

- [ ] 创建Next.js项目结构
- [ ] 生成TypeScript类型定义（基于新架构）
- [ ] 生成API客户端封装（会话实例API）
- [ ] 生成WebSocket管理
- [ ] 生成Shadcn UI基础组件
- [ ] 生成布局组件
- [ ] 生成会话实例管理组件
- [ ] 生成对话功能组件
- [ ] 生成角色管理组件
- [ ] 生成背景管理组件
- [ ] 生成页面路由 

### 中优先级

- [ ] Prompt模板前端管理功能
- [ ] 会话实例导出功能
- [ ] 角色状态展示
- [ ] 添加加载状态和错误处理
- [ ] 响应式布局优化

### 低优先级

- [ ] 编写组件文档
- [ ] 添加单元测试
- [ ] 性能监控和优化

---

## ⚙️ 强制性开发规范

### 1. 文件位置规范

| 文件类型 | 存放位置 | 示例 |
|---------|---------|------|
| 临时测试文件 | `temp/tests/` | test_*.* |
| 临时报告文件 | `temp/reports/` | *_report.md |
| 版本发布报告 | `docs/reports/` | v{版本号}_release_report.md |
| 归档文档 | `docs/archive/v{版本号}/` | PROJECT_STATUS.md 等 |
| 核心文档 | 项目根目录 | PROJECT_STATUS.md, README.md, CHANGELOG.md, 规范.md |
| 前端源代码 | `frontend/src/` | *.ts, *.tsx |
| 后端源代码 | `backend/app/` | *.py |
| 正式测试 | `tests/` | test_*.* |

### 2. 设计原则（关键）

**绝对禁止量化**：
- ❌ 不使用 priority, intensity, level, score 等数字
- ❌ 不使用"每N轮-1"的降级机制
- ❌ 不使用数字阈值判断删除

**纯定性描述**：
- ✅ 所有内容都是文本描述
- ✅ 用 timestamp 记录时间
- ✅ 用定期维护任务清理数据

---

## 🤝 AI 协作指南

### 基本原则

1. **归档文档是历史快照**：`docs/archive/` 不代表最新状态
2. **问题查阅顺序**：PROJECT_STATUS.md → DESIGN.md → 规范.md
3. **设计原则**：纯定性描述，绝对禁止量化

### 操作规范

**执行项目管理操作时，参考 `规范.md`**：
- 归档：`按照规范归档`
- 重构：`按照规范重构`
- 版本发布：`按照规范发布`
- 更新PS：`按照规范更新PS` 或 `更新PS`

---

## 🎯 下一步计划

### 短期目标（1-2周）

1. 设计后端API接口规范（基于会话实例架构）
2. 搭建FastAPI后端项目结构
3. 实现核心模块（StateManager, EventManager, PromptEngine）
4. 实现基础REST API

### 中期目标（3-4周）

1. 完成后端核心功能实现
2. 搭建Next.js前端项目
3. 实现前端核心UI组件
4. 前后端联调

### 长期目标（1-2月）

1. 完成V1.0功能开发
2. 测试和优化
3. 编写用户文档
4. 准备发布

---

**文档版本**: v0.3.7
**创建日期**: 2025-10-13
**最后更新**: 2025-10-16
